quil-rs/src/instruction/snapshots/quil_rs__instruction__calibration__test_measure_calibration_definition__display@With Variable Qubit.snap
---
source: quil-rs/src/instruction/calibration.rs
expression: measure_cal_def.to_quil_or_debug()
---
DEFCAL MEASURE q theta:
    X(%theta) q
